deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer
  labels:
    app: kafka-producer
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: kafka-producer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer
  labels:
    app: kafka-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-producer
  template:
    metadata:
      name: kafka-producer
      labels:
        app: kafka-producer
        autotrace: enabled
    spec:
      containers:
        - name: kafka-producer
          image: biandayu/producer
          imagePullPolicy: IfNotPresent
